[package]
name = "ce"
version = "0.1.0"
authors = ["Jacob Rodal <jrodal98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
dirs = "2.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "0.1.1"
